Added newsletter sign-up form. Updated rates. Tweaked styling.

--- a/greens-fees.html
+++ b/greens-fees.html
@@ -355,7 +355,7 @@
                 <tr>
                   <th scope="row">
                     <div class="th-wrap">10 Bucket Range Card</div>
-                    <div class="note">10 small tokens (300 balls)</div>
+                    <div class="note">10 small tokens - 300 balls</div>
                   </th>
                   <td>$60</td>
                 </tr>
