--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
-              <h2>Stagg Hill Golf Club</h2>
+              <h2>Stagg Hill <span class="italicized">Golf Club</span></h2>
             </div>
           </div>
           <div class="slide">
@@ -82,7 +82,7 @@
                 src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
-              <h2>Stagg Hill Golf Club</h2>
+              <h2>Stagg Hill <span class="italicized">Golf Club</span></h2>
             </div>
           </div>
           <div class="slide">
@@ -92,7 +92,7 @@
                 src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
-              <h2>Stagg Hill Golf Club</h2>
+              <h2>Stagg Hill <span class="italicized">Golf Club</span></h2>
             </div>
           </div>
           <div class="slide">
@@ -102,7 +102,7 @@
                 src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
-              <h2>Stagg Hill Golf Club</h2>
+              <h2>Stagg Hill <span class="italicized">Golf Club</span></h2>
             </div>
           </div>
         </div>
@@ -110,26 +110,36 @@
       <div class="container cornered-container">
         <div class="row">
           <div class="col">
-            <div
-              class="cornered-box wow fadeInUp"
-              data-wow-offset="100"
-              data-wow-delay=".7s"
-            >
-              Experience golf at its finest at Stagg Hill Golf Club in
-              Manhattan, KS! Our scenic 18-hole course offers a fun, challenging
-              round for all skill levels, just minutes from downtown.
+            <div class="cornered-box">
+              <img
+                src="assets/images/service/checkered-2-knockout-minus-one.svg"
+                class="manhattans-finest wow fadeIn"
+                data-wow-offset="100"
+                data-wow-delay=".7s"
+                alt=""
+              />
+              <p
+                class="wow fadeInUp"
+                data-wow-offset="100"
+                data-wow-delay=".8s"
+              >
+                Experience golf at its best at Stagg Hill Golf Club in
+                Manhattan, KS! Our scenic 18-hole course offers a fun,
+                challenging round for all skill levels, just minutes from
+                downtown.
+              </p>
             </div>
           </div>
         </div>
       </div>
 
-      <div
+      <!-- <div
         class="shape wow fadeInUp"
         data-wow-offset="100"
         data-wow-delay=".9s"
       >
         <img src="assets/images/svgs/checkered-upper.svg" alt="" />
-      </div>
+      </div> -->
     </div>
     <!-- rts banner four end -->
 
@@ -141,7 +151,7 @@
         data-wow-offset="100"
         data-wow-delay="1.2s"
       >
-        <img src="assets/images/svgs/checkered-lower.svg" alt="" />
+        <img src="assets/images/service/checkerd-lower.svg" alt="" />
       </div>
       <div class="container">
         <div
@@ -154,15 +164,19 @@
           >
             <div class="why-choose-process-left pb-3 mb-3">
               <div class="text-left-title-bg-white">
-                <h2 class="title">Stagg Hill History</h2>
+                <h2 class="title">
+                  The History of <br />
+                  <span class="italicized">Stagg Hill</span>
+                </h2>
                 <p>
-                  Stagg Hill Golf Club began its life in the early 1930s when
-                  members of the local American Legion solicited funding to
+                  <img src="assets/images/fav.svg" alt="" class="lil-stagg" />
+                  <b>Stagg Hill Golf Club</b> began its life in the early 1930s
+                  when members of the local American Legion solicited funding to
                   build a golf course that would serve the Manhattan community.
                   In 1930 construction began on rented land on top of Stagg
                   Hill, west of Manhattan. The fairways were composed of buffalo
                   grass and the tee boxes and putting greens were made of sand.
-                  Motor oil was even used to keep the sand in place!
+                  <b>Motor oil was even used to keep the sand in place!</b>
                 </p>
                 <p>
                   The course steadily lost money in the years after and was sold
@@ -170,13 +184,16 @@
                   had become too costly for the club and the scarcity of water
                   on the hill made conventional green grass difficult to grow.
                   In 1967, Johnny Kaw’s creator, George Filinger, acquired land
-                  to develop a new course with access to plenty of water and
-                  space for recreation, including fishing and picnicking.
+                  to develop
+                  <b>a new course with access to plenty of water</b> and space
+                  for recreation, including fishing and picnicking.
                 </p>
                 <p>
-                  Stagg Hill Golf Club is now a thriving 18 Hole course and
-                  community hub, hosting a variety of events and tournaments
-                  throughout the year!
+                  <b
+                    >Stagg Hill Golf Club is now a thriving 18 Hole course and
+                    community hub, hosting a variety of events and tournaments
+                    throughout the year!</b
+                  >
                 </p>
               </div>
             </div>
@@ -223,129 +240,72 @@
         <div class="text-center-title-bg-white">
           <h3 class="title">Stagg Hill News</h3>
         </div>
+        <div>
+          <div class="newsletter-signup-wrapper">
+            <p>subscribe to get the latest news in your inbox</p>
+            <div>
+              <form
+                class="js-cm-form row flex-nowrap"
+                id="subForm"
+                action="https://www.createsend.com/t/subscribeerror?description="
+                method="post"
+                data-id="A61C50BEC994754B1D79C5819EC1255C4BD1DC83CF7FF85E7CA680DB9A7086EE7056C6DBC495911287A729F6102CE51093CB034953DB30C711D23FA7E9FC9093"
+              >
+                <div class="input-side">
+                  <!-- <label for="fieldEmail">Email </label> -->
+                  <input
+                    autocomplete="Email"
+                    class="js-cm-email-input qa-input-email"
+                    id="fieldEmail"
+                    maxlength="200"
+                    name="cm-ouucy-ouucy"
+                    required=""
+                    type="email"
+                    placeholder="golfer@email.com"
+                  />
+                </div>
+                <div class="button-box">
+                  <button type="submit">Subscribe</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <script
+          type="text/javascript"
+          src="https://js.createsend1.com/javascript/copypastesubscribeformlogic.js"
+        ></script>
       </div>
       <div class="container">
-        <div
-          class="row g-5 wow fadeInUp"
-          data-wow-offset="120"
-          data-masonry='{"percentPosition": true }'
-          style="visibility: visible; animation-name: fadeInUp"
-        >
-       
+        <div class="row g-5" data-masonry='{"percentPosition": true }'>
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start border-left">
-              <div class="image-area">
+              <div class="image-area vertical-stag">
                 <img
+                  class="vertical-stag"
                   loading="lazy"
                   rel="preload"
-                  src="https://s3.amazonaws.com/data.gallusgolf.com/files/1169/a93ac138c46c4a7c85ee9a893b09dcd9.jpg"
+                  src="images/vertical-stag.jpg"
                   alt=""
                 />
               </div>
 
               <div class="inner-content-area d-flex">
                 <div class="top-area">
-                  <h3 class="title">Stagg Hill Annual Meeting</h3>
-                  <h6>Thursday November 20th</h6>
+                  <h3 class="title">Member Appreciation Event</h3>
+
                   <p>
-                    Location: The Blue Hills Room at Stagg Hill Golf Course.
+                    <b>Members, we appreciate you!</b> Come out on
+                    <b>December 3rd</b> and save like you never have in the golf
+                    shop. All apparel will be 60% OFF. All Golf Shoes, bags, and
+                    accessories 1/2 price. Cleveland Putters 35% OFF. All in-
+                    stock clubs 20% OFF. Bridgestone and Vice Golf Balls 1/2
+                    off.
+                    <b
+                      >Plus, Chad Myers Golf LLC will sponsor appetizers and
+                      drinks from 5-7pm.</b
+                    >
                   </p>
-                  <p>
-                    There are 3 Board seats available. If you would like to run
-                    for the board, please contact Nominating Committee Chair
-                    Brenda Neel at
-                    <a href="mailto:bk_neel@yahoo.com">bk_neel@yahoo.com</a>
-                    or Marlin Whitney at
-                    <a href="mailto:marlinwhitney1@yahoo.com"
-                      >marlinwhitney1@yahoo.com </a
-                    >.
-                  </p>
-                  <p>
-                    We will be hosting a taco bar for all attendees beginning at
-                    6pm with the meeting starting at 7pm.
-                  </p>
-                  <hr />
-                  <h6>Meet Your Candidates</h6>
-                  <div class="row flex-row candidate-row">
-                    <div>Steve Preston</div>
-                    <div class="spanner"></div>
-                    <div>
-                      <a
-                        href="assets/documents/Steve-Preston.pdf"
-                        class="bio-link"
-                        target="_blank"
-                        >Bio
-                        <img
-                          src="assets/images/icons/link.svg"
-                          class="injectable"
-                          alt=""
-                      /></a>
-                    </div>
-                  </div>
-                  <div class="row flex-row candidate-row">
-                    <div>Kayla Howard</div>
-                    <div class="spanner"></div>
-                    <div>
-                      <a
-                        href="assets/documents/Kayla-Howard.pdf"
-                        class="bio-link"
-                        target="_blank"
-                        >Bio
-                        <img
-                          src="assets/images/icons/link.svg"
-                          class="injectable"
-                          alt=""
-                      /></a>
-                    </div>
-                  </div>
-                  <div class="row flex-row candidate-row">
-                    <div>Justin Howard</div>
-                    <div class="spanner"></div>
-                    <div>
-                      <a
-                        href="assets/documents/Justin-Howard.pdf"
-                        class="bio-link"
-                        target="_blank"
-                        >Bio
-                        <img
-                          src="assets/images/icons/link.svg"
-                          class="injectable"
-                          alt=""
-                      /></a>
-                    </div>
-                  </div>
-                  <div class="row flex-row candidate-row">
-                    <div>Jason Lembright</div>
-                    <div class="spanner"></div>
-                    <div>
-                      <a
-                        href="assets/documents/Jason-Lembright.pdf"
-                        class="bio-link"
-                        target="_blank"
-                        >Bio
-                        <img
-                          src="assets/images/icons/link.svg"
-                          class="injectable"
-                          alt=""
-                      /></a>
-                    </div>
-                  </div>
-                  <div class="row flex-row candidate-row">
-                    <div>Brent Cain</div>
-                    <div class="spanner"></div>
-                    <div>
-                      <a
-                        href="assets/documents/Brent-Cain.pdf"
-                        class="bio-link"
-                        target="_blank"
-                        >Bio
-                        <img
-                          src="assets/images/icons/link.svg"
-                          class="injectable"
-                          alt=""
-                      /></a>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -376,7 +336,7 @@
                       donations to help us accomplish this goal!
                     </p>
                     <!-- <hr /> -->
-                    <h6>Donation Tiers</h6>
+                    <h6 class="pt-0 pt-md-4">Donation Tiers</h6>
                     <div class="row flex-row donation-row">
                       <div>Par</div>
                       <div class="spanner"></div>
@@ -397,7 +357,7 @@
                       <div class="spanner"></div>
                       <div>Over $1,000</div>
                     </div>
-                    <p style="padding-top: 10px">
+                    <p style="padding-top: 14px">
                       Donations will be noted at the annual meeting as well as
                       on a permanent plaque next to the short game area. If you
                       are willing to help improve our facilities by donating
@@ -501,7 +461,7 @@
                     </p>
                   </div>
                   <div class="row link-bar flex-row">
-                    <div>Click to renew with us</div>
+                    <div>Click to renew</div>
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="32"
@@ -650,12 +610,12 @@
             >
               <div class="hours-table-brow">
                 <div class="table-title-wrapper">
-                  <div class="icon-box">
+                  <!-- <div class="icon-box">
                     <img
                       class="golf-icon injectable"
                       src="assets/images/icons/golf.svg"
                     />
-                  </div>
+                  </div> -->
 
                   <h3 class="title">Course Policies</h3>
                 </div>
