--- a/membership-fees.html
+++ b/membership-fees.html
@@ -81,11 +81,28 @@
             data-wow-offset="120"
             data-wow-delay=".9s"
           >
-            <div class="row table-preface justify-content-between">
-              <div class="col-12 col-md-8 col-lg-6">
-                <h3>2025 Annual Membership Pricing</h3>
+            <div
+              class="row table-preface extra-padding-on-the-bottom justify-content-between"
+            >
+              <div class="col-12">
+                <h3>2026 Annual Membership Pricing</h3>
+                <p class="pull-it-back">
+                  <b
+                    >The membership types (below) include unlimited of the
+                    category chosen along with 10% Pro Shop Discounts,
+                    discounted guest fees, and members only event
+                    invitations.</b
+                  >
+                  New members that are categorized as single or family will be
+                  required to pay a one-time initiation fee: $300 for Single
+                  Memberships and $400 for Family Memberships. Students, Active
+                  Duty Military, and Juniors are not liable for paying the
+                  initiation fee and must provide proper ID to qualify for these
+                  membership types. Juniors are 18 & under that haven’t
+                  graduated HS.
+                </p>
                 <a
-                  href="assets/pdfs/2025-Membership-Application.pdf"
+                  href="assets/pdfs/2026-Membership-Application.pdf"
                   class="pillock"
                   target="_blank"
                 >
@@ -117,106 +134,258 @@
               <div class="col-12 col-md-4"></div>
             </div>
 
+            <!--* Bogey Memberships table -->
             <table>
               <thead>
                 <tr>
-                  <th scope="col"></th>
-                  <th scope="col">Single</th>
-                  <th scope="col">Family</th>
+                  <th scope="col">
+                    <div class="th-wrap">Bogey Memberships</div>
+                    <div class="note">
+                      Bogey memberships include
+                      <b>unlimited greens fees</b> only.
+                    </div>
+                  </th>
+                  <th scope="col">Monthly</th>
+                  <th scope="col">Yearly</th>
                 </tr>
               </thead>
               <tbody class="">
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">Initiation Fee</div>
+                    <div class="th-wrap">Single</div>
                   </th>
-                  <td>$250</td>
-                  <td>$350</td>
+                  <td>$72.92</td>
+                  <td>$875</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">Bogey</div>
-                    <div class="note">Greens Fees</div>
+                    <div class="th-wrap">Family</div>
                   </th>
-                  <td>$790</td>
-                  <td>$1180</td>
+                  <td>$106.67</td>
+                  <td>$1280</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">
-                      Par
-                    </div>
-                    <div class="note">Greens Fees and Driving Range</div>
+                    <div class="th-wrap">Military Single</div>
                   </th>
-                  <td>$1025</td>
-                  <td>$1540</td>
+                  <td>$57.08</td>
+                  <td>$685</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">
-                      Birdie 
-                    </div>
-                    <div class="note">Greens Fees and Cart Usage</div>
+                    <div class="th-wrap">Military Family</div>
                   </th>
-                  <td>$1495</td>
-                  <td>$2160</td>
+                  <td>$88.33</td>
+                  <td>$1060</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">
-                      Eagle 
-                    </div>
-                    <div class="note">
-                      Greens Fees, Driving Range, and Cart Usage
-                    </div>
-                  </th>
-                  <td>$1730</td>
-                  <td>$2520</td>
-                </tr>
-                <tr>
-                  <th scope="row">
-                    <div class="th-wrap">
-                      Junior<span class="asterisks">**</span>
-                    </div>
+                    <div class="th-wrap">Junior (Single Only)</div>
                     <div class="note">17 years and younger</div>
                   </th>
-                  <td>$300</td>
-                  <td>--</td>
+                  <td>$31.25</td>
+                  <td>$375</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">
-                      Student Bogey Membership<span class="asterisks">**</span>
-                    </div>
-                    <div class="note">
-                      college, vocational, or trade schools
-                    </div>
+                    <div class="th-wrap">Student (Single Only)</div>
+                    <div class="note">college, vocational, or trade school</div>
                   </th>
-                  <td>$570</td>
-                  <td>--</td>
-                </tr>
-                <tr>
-                  <th scope="row">
-                    <div class="th-wrap">
-                      Active Duty Military Bogey Membership<span
-                        class="asterisks"
-                        >**</span
-                      >
-                    </div>
-                  </th>
-                  <td>$600</td>
-                  <td>$960</td>
-                </tr>
-                <tr>
-                  <th scope="row">
-                    <div class="th-wrap">Driving Range (Non - Member)**</div>
-                  </th>
-                  <td>$450</td>
-                  <td>$675</td>
+                  <td>$54.17</td>
+                  <td>$650</td>
                 </tr>
               </tbody>
             </table>
-            <div class="addendum">
+
+            <!--* Par Memberships table -->
+            <table>
+              <thead>
+                <tr>
+                  <th scope="col">
+                    <div class="th-wrap">Par Memberships</div>
+                    <div class="note">
+                      Include <b>unlimited greens fees and driving range</b>.
+                    </div>
+                  </th>
+                  <th scope="col">Monthly</th>
+                  <th scope="col">Yearly</th>
+                </tr>
+              </thead>
+              <tbody class="">
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Single</div>
+                  </th>
+                  <td>$92.92</td>
+                  <td>$1115</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Family</div>
+                  </th>
+                  <td>$137.08</td>
+                  <td>$1645</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Military Single</div>
+                  </th>
+                  <td>$78.75</td>
+                  <td>$945</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Military Family</div>
+                  </th>
+                  <td>$120.83</td>
+                  <td>$1450</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Junior (Single Only)</div>
+                    <div class="note">17 years and younger</div>
+                  </th>
+                  <td>$51.25</td>
+                  <td>$615</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Student (Single Only)</div>
+                    <div class="note">college, vocational, or trade school</div>
+                  </th>
+                  <td>$75.42</td>
+                  <td>$905</td>
+                </tr>
+              </tbody>
+            </table>
+
+            <!--* Birdie Memberships table -->
+            <table>
+              <thead>
+                <tr>
+                  <th scope="col">
+                    <div class="th-wrap">Birdie Memberships</div>
+                    <div class="note">
+                      Include <b>unlimited greens fees and seat in cart</b>.
+                    </div>
+                  </th>
+                  <th scope="col">Monthly</th>
+                  <th scope="col">Yearly</th>
+                </tr>
+              </thead>
+              <tbody class="">
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Single</div>
+                  </th>
+                  <td>$132.50</td>
+                  <td>$1590</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Family</div>
+                  </th>
+                  <td>$189.17</td>
+                  <td>$2270</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Military Single</div>
+                  </th>
+                  <td>$119.58</td>
+                  <td>$1435</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Military Family</div>
+                  </th>
+                  <td>$174.58</td>
+                  <td>$2095</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Junior (Single Only)</div>
+                    <div class="note">17 years and younger</div>
+                  </th>
+                  <td>$90.83</td>
+                  <td>$1090</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Student (Single Only)</div>
+                    <div class="note">college, vocational, or trade school</div>
+                  </th>
+                  <td>$115.83</td>
+                  <td>$1390</td>
+                </tr>
+              </tbody>
+            </table>
+
+            <!--* Eagle Memberships table -->
+            <table>
+              <thead>
+                <tr>
+                  <th scope="col">
+                    <div class="th-wrap">Eagle Memberships</div>
+                    <div class="note">
+                      Include
+                      <b>unlimited greens fees, range, and seat in cart</b>.
+                    </div>
+                  </th>
+                  <th scope="col">
+                    <div>Monthly</div>
+                  </th>
+                  <th scope="col">Yearly</th>
+                </tr>
+              </thead>
+              <tbody class="">
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Single</div>
+                  </th>
+                  <td>$152.50</td>
+                  <td>$1830</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Family</div>
+                  </th>
+                  <td>$219.58</td>
+                  <td>$2635</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Military Single</div>
+                  </th>
+                  <td>$140.83</td>
+                  <td>$1690</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Military Family</div>
+                  </th>
+                  <td>$205.42</td>
+                  <td>$2465</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Junior (Single Only)</div>
+                    <div class="note">17 years and younger</div>
+                  </th>
+                  <td>$110.83</td>
+                  <td>$1330</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Student (Single Only)</div>
+                    <div class="note">college, vocational, or trade school</div>
+                  </th>
+                  <td>$137.08</td>
+                  <td>$1645</td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- <div class="addendum">
               <div class="two-paragraphs">
                 <p>
                   <span class="asterisks">**</span>Junior, Active Duty Military,
@@ -232,10 +401,10 @@
                   basis.
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
 
-          <!-- member cart fees table -->
+          <!--* member cart fees table -->
           <div
             class="table-wrapper-basic-fees wow fadeInUp"
             data-wow-offset="120"
@@ -272,7 +441,7 @@
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">Golf Cart Trail Fees</div>
+                    <div class="th-wrap">Annual Trail Fees</div>
                   </th>
                   <td>$250</td>
                 </tr>
@@ -288,10 +457,15 @@
           >
             <hr />
             <div class="row table-preface">
-              <div class="col-12 col-md-8 col-lg-6">
-                <h3>2025 Business Memberships</h3>
+              <div class="col-12">
+                <h3>2026 Business Memberships</h3>
+                <p>
+                  Supplemental rounds cards may be purchased alongside 50-round
+                  cards. You may purchase supplemental cards up front with the
+                  initial purchase, or later in the season.
+                </p>
                 <a
-                  href="assets/pdfs/2025-Business-Membership-Application.pdf"
+                  href="assets/pdfs/Business-Membership-Application-2026.pdf"
                   class="pillock"
                   target="_blank"
                 >
@@ -326,8 +500,7 @@
               <thead>
                 <tr>
                   <th scope="col"></th>
-                  <th scope="col">Walk</th>
-                  <th scope="col">Ride</th>
+                  <th scope="col">Price</th>
                 </tr>
               </thead>
               <tbody class="">
@@ -335,15 +508,27 @@
                   <th scope="row">
                     <div class="th-wrap">50 Rounds of Golf</div>
                   </th>
-                  <td>$1200</td>
-                  <td>$2100</td>
+                  <td>$1350</td>
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">20 Round Supplement Cards</div>
+                    <div class="th-wrap">50 Rounds of Golf with Cart</div>
                   </th>
-                  <td>$480</td>
-                  <td>$850</td>
+                  <td>$2350</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">Supplemental 20 Rounds of Golf</div>
+                  </th>
+                  <td>$540</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">
+                      Supplemental 20 Rounds of Golf with Cart
+                    </div>
+                  </th>
+                  <td>$940</td>
                 </tr>
               </tbody>
             </table>
