--- a/pro-shop.html
+++ b/pro-shop.html
@@ -132,7 +132,7 @@
               <div class="col-12">
                 <div class="specials rounded-corners">
                   <h5>
-                   🔥 August Pro Shop Specials
+                   🔥 Current Pro Shop Specials
                   </h5>
                   <p class="deal">40% OFF Adidas Shoes in Stock</p>
                   <p class="deal">25% OFF T-Shirts in Stock</p>
