Added December promotion to Membership Fees page.

--- a/membership-fees.html
+++ b/membership-fees.html
@@ -101,6 +101,17 @@
                   membership types. Juniors are 18 & under that haven’t
                   graduated HS.
                 </p>
+                <h6 style="font-size: 27px; font-weight: 450; margin-block-end: 1rem;">Special End-of-Year Promotion</h6>
+                <p class="pull-it-back">
+                  Membership Initiation fees will go up in 2026! Join in
+                  December and receive any available tee time in December at no
+                  charge, then begin your monthly dues payments in January of
+                  2026 at whatever membership level of your choice
+                  <b>with a discounted initiation fee</b>: Single Membership
+                  initiation fees for $250 and Family Memberships initation fees
+                  for $350.
+                  <b>Promotion ends at the end of this year so act fast!</b>
+                </p>
                 <a
                   href="assets/pdfs/2026-Membership-Application.pdf"
                   class="pillock"
@@ -145,8 +156,8 @@
                       <b>unlimited greens fees</b> only.
                     </div>
                   </th>
-                  <th scope="col">Monthly</th>
-                  <th scope="col">Yearly</th>
+                  <th scope="col" class="im-special">Monthly</th>
+                  <th scope="col" class="im-special">Yearly</th>
                 </tr>
               </thead>
               <tbody class="">
@@ -207,8 +218,8 @@
                       Include <b>unlimited greens fees and driving range</b>.
                     </div>
                   </th>
-                  <th scope="col">Monthly</th>
-                  <th scope="col">Yearly</th>
+                  <th scope="col" class="im-special">Monthly</th>
+                  <th scope="col" class="im-special">Yearly</th>
                 </tr>
               </thead>
               <tbody class="">
@@ -269,8 +280,8 @@
                       Include <b>unlimited greens fees and seat in cart</b>.
                     </div>
                   </th>
-                  <th scope="col">Monthly</th>
-                  <th scope="col">Yearly</th>
+                  <th scope="col" class="im-special">Monthly</th>
+                  <th scope="col" class="im-special">Yearly</th>
                 </tr>
               </thead>
               <tbody class="">
@@ -332,10 +343,10 @@
                       <b>unlimited greens fees, range, and seat in cart</b>.
                     </div>
                   </th>
-                  <th scope="col">
+                  <th scope="col" class="im-special">
                     <div>Monthly</div>
                   </th>
-                  <th scope="col">Yearly</th>
+                  <th scope="col" class="im-special">Yearly</th>
                 </tr>
               </thead>
               <tbody class="">
