Corrected font issues on Calendar page.

--- a/greens-fees.html
+++ b/greens-fees.html
@@ -231,12 +231,12 @@
 
           <!-- non-standard rates -->
           <div
-            class="table-wrapper-busy wow fadeInUp"
+            class="table-wrapper wow fadeInUp"
             data-wow-offset="120"
             data-wow-delay=".1s"
           >
             <hr />
-            <div class="row table-preface busy">
+            <div class="row table-preface">
               <div class="col-12 col-md-8 col-lg-6">
                 <h3>Non-Standard Rates</h3>
                 <p>All rates are for 18 holes with cart.</p>
@@ -286,12 +286,12 @@
 
           <!-- trail fee -->
           <div
-            class="table-wrapper-busy wow fadeInUp"
+            class="table-wrapper wow fadeInUp"
             data-wow-offset="120"
             data-wow-delay=".1s"
           >
             <hr />
-            <div class="row table-preface busy">
+            <div class="row table-preface">
               <div class="col-12 col-md-8 col-lg-6">
                 <h3>Trail Fees</h3>
                 <p>(Bring your own cart.)</p>
@@ -324,7 +324,7 @@
             data-wow-delay=".1s"
           >
             <hr />
-            <div class="row table-preface range justify-content-between">
+            <div class="row table-preface justify-content-between">
               <div class="col-12 col-md-8 col-lg-6">
                 <h3>Driving Range</h3>
               </div>
