--- a/membership-fees.html
+++ b/membership-fees.html
@@ -85,7 +85,7 @@
               class="row table-preface extra-padding-on-the-bottom justify-content-between"
             >
               <div class="col-12">
-                <h3>2026 Annual Membership Pricing</h3>
+                <h2>2026 Annual Membership Pricing</h2>
                 <p class="pull-it-back">
                   <b
                     >The membership types (below) include unlimited of the
@@ -101,7 +101,7 @@
                   membership types. Juniors are 18 & under that haven’t
                   graduated HS.
                 </p>
-                <h6 style="font-size: 27px; font-weight: 450; margin-block-end: 1rem;">Special End-of-Year Promotion</h6>
+                <h6 >Special End-of-Year Promotion</h6>
                 <p class="pull-it-back">
                   Membership Initiation fees will go up in 2026! Join in
                   December and receive any available tee time in December at no
